fix(CarName): 의미없는 검증 삭제